--- a/dappexplorer.html
+++ b/dappexplorer.html
@@ -44,6 +44,22 @@
         </div>
       </div>
     </div>
+    <div class="col-md-4">
+      <div class="card" style="width: 105%;">
+        <img src="https://assets.website-files.com/609e7a6f2ec5c05d866ed6d3/60a7d6075adffd5ce48ea5da_POKT_Symbol_Color.svg" class="card-img-top" alt="..." style="height: 10vh;">
+        <div class="card-body">
+          <h5 class="card-title">Pocket Network</h5>
+          <p class="card-text">Decentralized RPC service</p>
+          <a href="https://pokt.network/" class="btn"><i class="fas fa-link"></i> Home</a>
+          <a href="https://blog.pokt.network/" class="btn"><i class="fas fa-link"></i> Blog</a>
+          <a href="https://forum.pokt.network/" class="btn"><i class="fas fa-link"></i> Forum</a>
+          <a href="https://wrapped.pokt.network/faq" class="btn"><i class="fas fa-link"></i> Wrapped</a>
+          <a href="https://c0d3r.org/NetworkCharts" class="btn"><i class="fas fa-desktop"></i> c0d3r</a>
+          <a href="https://poktscan.com/" class="btn"><i class="fas fa-desktop"></i> Scan</a>
+          <a href="https://docs.pokt.network/home/" class="btn "><i class="fas fa-file-alt"></i> Docs</a>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
 </body>
